# emunit

./: CMakeLists.txt  README.md
cmake/: FindNEWLIB.cmake
lib/newlib/: CMakeLists.txt
scripts/: build.sh  setup.sh  test.sh
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_main.c
toolchain/: arm-gcc.cmake  riscv-gcc.cmake  x86-gcc.cmake
